--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
     "chai": "^4.3.4",
     "esbuild": "^0.13.15",
     "mocha": "^9.1.3",
-    "node-fetch": "^3.1.0"
+    "node-fetch": "3.0.0"
   }
 }
