--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "fetch_with_checks",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A wrapper for fetch() with safety checks",
   "main": "dist/out.js",
   "scripts": {
     "build": "esbuild src/index.ts --bundle --target=chrome58,firefox57 --outfile=dist/out.js --format=cjs",
-    "test": "npx esbuild test/suite.ts --outfile=test/suite.js --bundle --platform=node && mocha test/suite.js"
+    "test": "esbuild test/suite.ts --outfile=test/suite.js --bundle --platform=node && mocha test/suite.js",
+    "eslint": "eslint src --ext .ts"
   },
   "author": "",
   "license": "ISC",
@@ -13,9 +14,12 @@
     "@types/chai": "^4.2.22",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.11.10",
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
     "chai": "^4.3.4",
     "esbuild": "^0.13.15",
+    "eslint-plugin-react": "^7.27.1",
     "mocha": "^9.1.3",
-    "node-fetch": "3.0.0"
+    "node-fetch": "3.0.0",
+    "typescript-eslint": "^0.0.1-alpha.0"
   }
 }
