--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "fetch_with_checks",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A wrapper for fetch() with safety checks",
   "main": "dist/out.js",
   "scripts": {
     "build": "esbuild src/index.ts --bundle --target=chrome58,firefox57 --outfile=dist/out.js --format=cjs",
+    "prepublishOnly": "esbuild src/index.ts --bundle --target=chrome58,firefox57 --outfile=dist/out.js --format=cjs",
     "test": "esbuild test/suite.ts --outfile=test/suite.js --bundle --platform=node && mocha test/suite.js",
     "eslint": "eslint src --ext .ts"
   },
